Realice cambio de color a la navbar y tambien al logo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <p class="subtitulo">Santidad a Jehova</p>
+    <p class="subtitulo">"Santidad a Jehova"</p>
 
     <img class="banner" src="./images/banner.png" alt="Banner" />
 
