--- a/index.html
+++ b/index.html
@@ -5,130 +5,235 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--css-->
   <link rel="stylesheet" href="./css/index.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet" />
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/swiper.css" />
+  <!--css bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!--FontAwesome icons-->
+  <script src="https://kit.fontawesome.com/5015b9ded9.js" crossorigin="anonymous"></script>
+  <title>Inicio</title>
+
+  <!-- SwiperJs -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </head>
 
 <body>
-  <!-- BARRA DE NAVEGACION-->
-  <!-- ENCABEZADO Y LOGO-->
+
+  <!-- encabezado -->
   <header>
-    <nav>
-      <img src="./images/logo.png" alt="logo" height="100px" width="100px" />
 
-      <input type="text" name="" id="" placeholder="Buscar..." />
+    <!-- Sidebar -->
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark offcanvas offcanvas-start" id="offcanvasExample"
+      tabindex="-1" style="width: 280px;">
+      <div class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none w-100">
 
-      <ul>
-        <li><a href="index.html"> Inicio</a></li>
-        <li><a href="paginas/imagenes.html"> Imagenes</a></li>
-        <li><a href="paginas/reserva.html"> Reservas</a></li>
-        <li><a href="paginas/contacto.html"> Contacto</a></li>
+        <div class="p-2 w-100 fs-4">
+          <i class="fa-solid fa-place-of-worship"></i> &nbsp;&nbsp; M.M.M
+        </div>
+        <div class="p-2 flex-shrink-1">
+          <button class="fs-4 btn text-reset" data-bs-dismiss="offcanvas"><i
+              class="fa-solid fa-circle-xmark"></i></button>
+        </div>
+      </div>
+      <hr>
 
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link text-white active" aria-current="page">
+            Inicio
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="paginas/quienes-somos.html" class="nav-link text-white">
+            Quienes somos
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="paginas/galeria.html" class="nav-link text-white">
+            Galeria
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="paginas/contacto.html" class="nav-link text-white">
+            Contacto
+          </a>
+        </li>
       </ul>
+    </div>
+
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+      <div class="container-fluid ps-0 pe-0">
+        <div class="navbar-brand w-100">
+          <div class="d-flex w-100">
+            <div class="p-2 flex-shrink-1 align-self-center">
+              <a class="btn btn-primary-outline fs-3" role="button" href="https://es-es.facebook.com"><i
+                  class="fa-brands fa-facebook"></i></a>
+              <a class="btn btn-primary-outline fs-3" role="button" href="https://web.whatsapp.com"><i
+                  class="fa-brands fa-whatsapp"></i></a>
+            </div>
+            <div class="p-2 w-100 fs-4 text-center">
+              <img src="./images/logo.png" width="150" height="150" alt="">
+            </div>
+            <div class="p-2 flex-shrink-1 align-self-center">
+              <button class="btn btn-secondary fs-4" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                <i class="fa-solid fa-bars"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </nav>
   </header>
 
-  <!-- AQUI VA EL CONTENIDO CENTRAL -->
-  <main class="main-container">
-    <div class="bannerPrincipal">
-      <div class="bannerPrincipal-text">
-        <h1 class="titulos-principales">Movimiento Misionero Mundial</h1>
-        <p>Sede Alicante</p>
+  <!-- content -->
+  <main>
+    <div class="swiper myCustomSwiper">
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide centerContent">
+          <img src="https://csm.hyadcms.net/files/csm/revslider/1/header-welcome1.jpg" alt="">
+          <div class="blurEffect customTextStyle">
+            Bienvenido a la iglesia Movimiento Misionero Mundial, una iglesia cristiana en Alicante.
+          </div>
+        </div>
+        <div class="swiper-slide centerContent">
+          <img src="./images/disponibilidad.png" alt="">
+
+        </div>
+        <div class="swiper-slide centerContent">
+          <img src="https://csm.hyadcms.net/files/csm/revslider/5/header-new.jpg" alt="">
+          <div class="blurEffect customTextStyle">
+            ¿Eres nuevo en cristo Salvador?
+          </div>
+        </div>
+      </div>
+      <!-- Swiper Controls -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="centerContent">
+        <div class="swiper-pagination blurEffect"></div>
       </div>
     </div>
 
-    <p class="subtitulo">"Santidad a Jehova"</p>
-
-    <img class="banner" src="./images/banner.png" alt="Banner" />
-
-    <p class="subtitulo">
-      "Entonces respondí yo: Heme aqui,envíame a mi" Isaias 6.8
-    </p>
-
     <div class="container">
-      <div class="card">
-        <img src="./images/bautizos.png" alt="" />
-        <h4>bautizos</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          optio eligendi veniam. Officiis voluptas fugiat officia amet
-          sapiente enim dicta deleniti soluta eum architecto, unde, cumque
-          doloremque reiciendis blanditiis rerum.
-        </p>
-        <button class="boton">leer mas</button>
+
+      <div class=" text-center pt-5">
+        <h1 class="">Movimiento Misionero Mundial</h1>
+        <p class="fs-3">Sede Alicante</p>
+        <p class="pt-3"> Queremos ver una familia de iglesias que transforma vidas e impacta naciones.</p>
       </div>
 
-      <div class="card">
-        <img src="./images/coro.png" alt="" />
-        <h4>Coro</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          optio eligendi veniam. Officiis voluptas fugiat officia amet
-          sapiente enim dicta deleniti soluta eum architecto, unde, cumque
-          doloremque reiciendis blanditiis rerum.
-        </p>
-        <button class="boton">leer mas</button>
+      <div class="row py-2">
 
-      </div>
+        <div class="col d-flex justify-content-center py-3">
+          <div class="card bg-secondary bg-gradient bg-opacity-10 text-center" style="width: 18rem;">
+            <img src="./images/cultos.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">El miedo</h5>
+              <p class="card-text">La arena en la maquinaria de la vida.</p>
+              <a href="#" class="btn btn-primary">Leer mas </a>
+            </div>
+          </div>
+        </div>
 
-      <div class="card">
-        <img src="./images/cultos.png" alt="" />
-        <h4>cultos</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          optio eligendi veniam. Officiis voluptas fugiat officia amet
-          sapiente enim dicta deleniti soluta eum architecto, unde, cumque
-          doloremque reiciendis blanditiis rerum.
-        </p>
-        <button class="boton">leer mas</button>
+        <div class="col d-flex justify-content-center py-3">
+          <div class="card bg-secondary bg-gradient bg-opacity-10 text-center" style="width: 18rem;">
+            <img src="./images/Ministerio-de-Jovenes.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Naciones</h5>
+              <p class="card-text pb-4">Como tiene todas las naciones.</p>
+              <a href="#" class="btn btn-primary">Leer mas</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col d-flex justify-content-center py-3">
+          <div class="card bg-secondary bg-gradient bg-opacity-10 text-center" style="width: 18rem;">
+            <img src="./images/coro.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">La fe </h5>
+              <p class="card-text pb-4">¿Es la fe un salto al vacio?</p>
+              <a href="#" class="btn btn-primary">Leer mas</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
-  <!-- PIE DE PAGINA-->
-  <footer>
-    <p class="titulo-s">Acerca de nosotros</p>
 
-    <div class="footer-info-container">
-      <div class="footer-info-left">
-        <!-- LISTA -->
-        <ul>
-          <li><a href="footer/quienes-somos.html"> Quienes somos</a></li>
-          <li><a href="footer/ubicacion.html"> Ubicación</a></li>
-          <li><a href="paginas/contacto.html"> Contactenos</a></li>
-        </ul>
+  <!-- PIE DE PAGINA -->
+  <footer class="text-white mt-5">
 
-        <!-- REDES SOCIALES -->
-        <div class="redes">
-          <a href="https://es-es.facebook.com"><img class="img-redes" src="./images/facebook.svg" alt="Facebook"
-              height="40px" width="40px" /></a>
-          <a href="https://www.instagram.com"><img class="img-redes" src="./images/instagram.svg" alt="Instagram"
-              height="40px" width="40px" /></a>
-          <a href="https://web.whatsapp.com"><img class="img-redes" src="./images/whatsapp.svg" alt="WhatsApp"
-              height="40px" width="40px" /></a>
-        </div>
+    <div class="d-flex bg-purple position-relative justify-content-center pt-5 pb-5">
+      <div class="footer-icon bg-purple d-flex justify-content-center align-items-center">
+        <i class="fa-solid fa-map-location-dot"></i>
       </div>
 
-      <div class="footer-info-right">
-        <!-- MAPA -->
-        <iframe width="520" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-          id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=350&amp;hl=en&amp;q=virgen%20de%20fatima%20%20Alicante+(Mapa%20del%20sitio%20)
-          &amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
-        </iframe>
+      <div class="text-center w-100">
+        <!-- LISTA -->
+        <p class="fs-2 fw-bold pb-3">Mapa del sitio</p>
+
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
+              <iframe class="w-100 border border-4 border-secondary rounded-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3129.120761952675!2d-0.
+              5180587843691582!3d38.34618688684988!2m3!1f0!2f0!3f0!3m2!1i1024!
+              2i768!4f13.1!3m3!1m2!1s0xd62366feff80889%3A0x5c8c90c2dbcbabac!2sC.
+              %20Virgen%20de%20F%C3%A1tima%2C%207%2C%2003006%20Alicante%20
+              (Alacant)%2C%20Alicante!5e0!3m2!1ses-419!2ses!4v1646950425672
+              !5m2!1ses-419!2ses" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="final-footer">
-      <div class="left-footer-space">
-        <p>Condiciones</p>
-        <p>Politicas</p>
+    <div class="d-flex bg-grey position-relative justify-content-center pt-5 pb-5">
+      <div class="footer-icon bg-grey d-flex justify-content-center align-items-center">
+        <i class="fa-solid fa-mobile-screen-button"></i>
       </div>
 
-      <div class="right-footer-space">
-        <p class="label-footer__cp">copyright &copy; 2022</p>
+      <div class="text-center">
+        <!-- LISTA -->
+        <p class="fs-2 fw-bold pb-3">Ponte en contacto</p>
+        <ul class="list-unstyled text-warning">
+          <li class="pb-2">leidy300196@gmail.com</li>
+          <li>+00 123 4567 89</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="d-flex bg-white position-relative justify-content-center px-3 pt-5 pb-4">
+
+      <div class="footer-icon bg-white d-flex justify-content-center align-items-center">
+        <i class="fa-solid fa-file-contract text-black"></i>
+      </div>
+
+      <div class="d-flex text-black w-100">
+        <div class="d-flex flex-fill justify-content-between">
+          <p>Condiciones</p>
+          <p>Politicas</p>
+        </div>
+
+        <div class="d-flex flex-fill justify-content-end">
+          <p>Copyright &copy; 2022</p>
+        </div>
       </div>
     </div>
   </footer>
+
+  <!--script-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
+  <script src="scripts/customSwiper.js"></script>
 </body>
 
 </html>
