--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -2,18 +2,20 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--css-->
   <link rel="stylesheet" href="../css/index.css" />
   <!--css bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
   <!--FontAwesome icons-->
   <script src="https://kit.fontawesome.com/5015b9ded9.js" crossorigin="anonymous"></script>
-  <title>Contacto</title>
+  <title>Quienes somos</title>
+
 </head>
 
 <body>
@@ -42,7 +44,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="../paginas/quienes-somos.html" class="nav-link text-white">
+          <a href="../paginas/quienes-somos.html" class="nav-link text-white active">
             Quienes somos
           </a>
         </li>
@@ -52,7 +54,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="../paginas/contacto.html" class="nav-link text-white active">
+          <a href="../paginas/contacto.html" class="nav-link text-white">
             Contacto
           </a>
         </li>
@@ -85,54 +87,74 @@
     </nav>
   </header>
 
-  <!-- INFORMACION DEL CONTACTO -->
+  <!-- INFORMACION DE LA EMPRESA -->
   <main>
-    <div>
-      <div class="text-center pt-4">
-        <h2>Contacto</h2>
-      </div>
-      <hr>
-      <div class="container pt-3 pb-5">
-        <div class="row justify-content-center">
-          <div class="col col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
+    <div class="text-center pt-4">
+      <h2>Quienes somos</h2>
+      <p class="pt-3 pb-3">Somos una organización que nació en el corazón de Dios para esta hora final,
+        cuando tantos creyentes, congregaciones y concilios,
+        se están deslizando por la corriente del pecado;
+        una obra con fundamento bíblico que defiende la sana doctrina.</p>
+    </div>
+    <hr>
 
-            <div class="card">
-              <div class="card-body">
-                <form>
-                  <div class="mb-3">
-                    <label for="nameInput" class="form-label"><i class="fa fa-user bigicon"></i></label>
-                    <input type="text" class="form-control" id="nameInput" placeholder="Nombre">
-                  </div>
-                  <div class="mb-3">
-                    <label for="lastnameInput" class="form-label"><i class="fa fa-user bigicon"></i></label>
-                    <input type="text" class="form-control" id="lastnameInput" placeholder="Apellido">
-                  </div>
-                  <div class="mb-3">
-                    <label for="emailInput" class="form-label"><i class="fa fa-envelope-o bigicon"></i></label>
-                    <input type="email" class="form-control" id="emailInput" placeholder="Email">
-                  </div>
-                  <div class="mb-3">
-                    <label for="phoneInput" class="form-label"><i class="fa fa-phone-square bigicon"></i></label>
-                    <input type="number" class="form-control" id="phoneInput" placeholder="Móvil">
-                  </div>
-
-                  <div class="mb-3">
-                    <label for="messageInput" class="form-label"><i class="fa fa-pencil-square-o bigicon"></i></label>
-                    <textarea class="form-control" id="messageInput" placeholder="Deja tu comentario"
-                      rows="7"></textarea>
-                  </div>
-
-                  <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md-6 py-4">
+          <img src="../images/mmmoficial_974.jpg" alt="" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center">
+          <h2>Iglesia</h2>
+          <p>
+            Nuestra organización Cristiana Evangélica,
+            Movimiento Misionero Mundial está presente en todo el mundo,
+            las actividades que ejercemos radican en la predicación de
+            los Santos Evangelios, enfatizado en la Sana Doctrina
+            Bíblica. Realizamos también campañas de evangelización,
+            instaurando iglesias, estudios bíblicos, formando obreros
+            y estableciendo nuevos templos.
+          </p>
         </div>
       </div>
     </div>
-
+    <hr>
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md-6 text-center pt-4">
+          <h2>Mision</h2>
+          <p>
+            Guiados por el Espíritu Santo, trabajar como instrumentos de Dios en la sociedad, para que todas las
+            personas de todas las edades mejoren sus condiciones de vida presente y futura, proclamándoles el Evangelio
+            de Jesucristo para arrepentimiento y perdón de pecados; y, fomentando la comunión cristiana para su
+            crecimiento espiritual.
+          </p>
+          <p>
+            Enseñar y discipular de modo de que podamos ser componente activo y visible del reino de los cielos.
+          </p>
+        </div>
+        <div class="col-md-6 py-4">
+          <img src="../images/banner.png" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md-6 py-4">
+          <img src="../images/historia.jpg" alt="" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center">
+          <h2>Vision</h2>
+          <p>
+            Ser una iglesia que honre a Dios,
+            con cristianos comprometidos y unidos que amen
+            a la comunidad, para alcanzar a todas las almas
+            posibles a través de la predicación del Evangelio
+            de Jesucristo (No sólo de manera oral).
+          </p>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- PIE DE PAGINA -->
@@ -170,6 +192,7 @@
         </div>
       </div>
     </div>
+
 
   </footer>
   <!--script-->
