--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!--css-->
   <link rel="stylesheet" href="./css/index.css" />
   <link rel="stylesheet" href="./css/swiper.css" />
+  <link rel="stylesheet" href="./css/custom.css">
   <!--css bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -129,7 +130,7 @@
     <div class="container">
 
       <div class=" text-center pt-5">
-        <h1 class="">Movimiento Misionero Mundial</h1>
+        <h1>Movimiento Misionero Mundial</h1>
         <p class="fs-3">Sede Alicante</p>
         <p class="pt-3"> Queremos ver una familia de iglesias que transforma vidas e impacta naciones.</p>
       </div>
@@ -239,6 +240,7 @@
     </script>
 
   <script src="scripts/customSwiper.js"></script>
+  <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
