--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </script>
 
   <script src="scripts/customSwiper.js"></script>
-  <script src="js/bootstrap.js"></script>
+  <script src="scripts/bootstrap.js"></script>
 </body>
 
 </html>
