--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- aplicando seo-->
+	<meta name="description" content="Somos una iglesia de sana doctrina, ubicada en Alicante España">
+  <meta name="keywords"  content="Ubicación, iglesia, quienes somos, contacto">
   <!--css-->
   <link rel="stylesheet" href="../css/index.css" />
   <!--css bootstrap-->
