--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Somos una iglesia de sana doctrina, ubicada en Alicante España">
   <meta name="keywords"  content="Ubicación, iglesia, quienes somos, contacto">
   <!--css-->
-  <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="../scss/index.css" />
   <!--css bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
