--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -11,8 +11,8 @@
     <!-- icon -->
     <link rel="icon" href="/images/logo.png">
     <!--css-->
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/galeria.css" />
+    <link rel="stylesheet" href="../scss/index.css" />
+    <link rel="stylesheet" href="../scss/galeria.css" />
     <!--css bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
