--- a/paginas/reservas.html
+++ b/paginas/reservas.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- aplicando seo-->
-  <meta name="description" content="Somos una iglesia de sana doctrina, ubicada en Alicante España">
-  <meta name="keywords" content="Ubicación, iglesia, quienes somos, contacto">
-  <!-- icon -->
-  <link rel="icon" href="/images/logo.png">
-  <!--css-->
-  <link rel="stylesheet" href="../css/index.css" />
-  <!--css bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- aplicando seo-->
+	<meta name="description" content="Somos una iglesia de sana doctrina, ubicada en Alicante España">
+  <meta name="keywords"  content="Ubicación, iglesia, quienes somos, contacto">
+    <!-- icon -->
+    <link rel="icon" href="/images/logo.png">
+    <!--css-->
+    <link rel="stylesheet" href="../scss/index.css" />
+    <!--css bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <!--FontAwesome icons-->
-  <script src="https://kit.fontawesome.com/5015b9ded9.js" crossorigin="anonymous"></script>
-  <title>reserva</title>
+    <!--FontAwesome icons-->
+    <script src="https://kit.fontawesome.com/5015b9ded9.js" crossorigin="anonymous"></script>
+    <title>reserva</title>
 </head>
 
 <body>
-  <!-- encabezado -->
+     <!-- encabezado -->
   <header>
 
     <!-- Sidebar -->
@@ -57,10 +57,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="./reservas.html" class="nav-link text-white active">
-            Reserva
-          </a>
-        </li>
+            <a href="./reservas.html" class="nav-link text-white active">
+              Reserva
+            </a>
+          </li>
         <li class="nav-item">
           <a href="./contacto.html" class="nav-link text-white ">
             Contacto
@@ -96,67 +96,67 @@
   </header>
   <main>
     <div>
-      <div class="text-center pt-4">
-        <h2>Reserva</h2>
-      </div>
-      <hr>
-      <div class="container pt-3 pb-5">
-        <div class="row justify-content-center">
-          <div class="col col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
-
-            <div class="card">
-              <div class="card-body">
-                <form>
-                  <div class="mb-3">
-                    <label for="nameInput" class="form-label"><i class="fa fa-user bigicon"></i></label>
-                    <input type="text" class="form-control" id="nameInput" placeholder="Nombre">
-                  </div>
-                  <div class="mb-3">
-                    <label for="lastnameInput" class="form-label"><i class="fa fa-user bigicon"></i></label>
-                    <input type="text" class="form-control" id="lastnameInput" placeholder="Apellido">
-                  </div>
-                  <div class="mb-3">
-                    <label for="disabledSelect" class="form-label">Lugar</label>
-                    <select id="disabledSelect" class="form-select">
-                      <option>Alicante</option>
-                      <option>Murcia</option>
-                      <option>Valencia</option>
-                      <option>Benidorm</option>
-                    </select>
-                  </div>
-                  <div class="mb-3">
-                    <label for="disabledSelect" class="form-label">Personas</label>
-                    <select id="disabledSelect" class="form-select">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                    </select>
-                  </div>
-                  <div class="mb-3">
-                    <label for="phoneInput" class="form-label"><i class="fa fa-phone-square bigicon"></i></label>
-                    <input type="number" class="form-control" id="phoneInput" placeholder="Móvil">
-                  </div>
-
-                  <div class="mb-3">
-                    <label for="messageInput" class="form-label"><i class="fa fa-pencil-square-o bigicon"></i></label>
-                    <textarea class="form-control" id="messageInput" placeholder="Deja tu comentario"
-                      rows="7"></textarea>
-                  </div>
-
-                  <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
-                  </div>
-                </form>
+        <div class="text-center pt-4">
+          <h2>Reserva</h2>
+        </div>
+        <hr>
+        <div class="container pt-3 pb-5">
+          <div class="row justify-content-center">
+            <div class="col col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
+  
+              <div class="card">
+                <div class="card-body">
+                  <form>
+                    <div class="mb-3">
+                      <label for="nameInput" class="form-label"><i class="fa fa-user bigicon"></i></label>
+                      <input type="text" class="form-control" id="nameInput" placeholder="Nombre">
+                    </div>
+                    <div class="mb-3">
+                      <label for="lastnameInput" class="form-label"><i class="fa fa-user bigicon"></i></label>
+                      <input type="text" class="form-control" id="lastnameInput" placeholder="Apellido">
+                    </div>
+                    <div class="mb-3">
+                        <label for="disabledSelect" class="form-label">Lugar</label>
+                        <select id="disabledSelect" class="form-select">
+                          <option>Alicante</option>
+                          <option>Murcia</option>
+                          <option>Valencia</option>
+                          <option>Benidorm</option>
+                        </select>
+                      </div>
+                      <div class="mb-3">
+                        <label for="disabledSelect" class="form-label">Personas</label>
+                        <select id="disabledSelect" class="form-select">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                        </select>
+                      </div>
+                    <div class="mb-3">
+                      <label for="phoneInput" class="form-label"><i class="fa fa-phone-square bigicon"></i></label>
+                      <input type="number" class="form-control" id="phoneInput" placeholder="Móvil">
+                    </div>
+  
+                    <div class="mb-3">
+                      <label for="messageInput" class="form-label"><i class="fa fa-pencil-square-o bigicon"></i></label>
+                      <textarea class="form-control" id="messageInput" placeholder="Deja tu comentario"
+                        rows="7"></textarea>
+                    </div>
+  
+                    <div class="col-md-12 text-center">
+                      <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
   </main>
-  <!-- PIE DE PAGINA -->
-  <footer class="text-white mt-5">
+   <!-- PIE DE PAGINA -->
+   <footer class="text-white mt-5">
 
     <div class="d-flex bg-grey position-relative justify-content-center pt-5 pb-5">
       <div class="footer-icon bg-grey d-flex justify-content-center align-items-center">
@@ -193,10 +193,10 @@
 
 
   </footer>
-  <!--script-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+    <!--script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
