--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   class="fa-brands fa-whatsapp"></i></a>
             </div>
             <div class="p-2 w-100 fs-4 text-center">
-              <img src="./images/logo.png" width="150" height="150" alt="">
+              <a href="./index.html"> <img src="./images/logo.png"  width="150" height="150" alt=""></a>
             </div>
             <div class="p-2 flex-shrink-1 align-self-center">
               <button class="btn btn-secondary fs-4" type="button" data-bs-toggle="offcanvas"
@@ -133,7 +133,7 @@
     <div class="container">
 
       <div class=" text-center pt-5">
-        <h1 class="bg-primary">Movimiento Misionero Mundial</h1>
+        <h1>Movimiento Misionero Mundial</h1>
         <p class="fs-3">Sede Alicante</p>
         <p class="pt-3"> Queremos ver una familia de iglesias que transforma vidas e impacta naciones.</p>
       </div>
