--- a/paginas/reservas.html
+++ b/paginas/reservas.html
@@ -81,7 +81,7 @@
                   class="fa-brands fa-whatsapp"></i></a>
             </div>
             <div class="p-2 w-100 fs-4 text-center">
-              <img src="../images/logo.png" width="150" height="150" alt="">
+              <a href="../index.html"> <img src="../images/logo.png"  width="150" height="150" alt=""></a>
             </div>
             <div class="p-2 flex-shrink-1 align-self-center">
               <button class="btn btn-secondary fs-4" type="button" data-bs-toggle="offcanvas"
